hphp/hack/test/typecheck/reified_generics/box_keyword.php.exp
File "box_keyword.php", line 8, characters 14-19:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
File "box_keyword.php", line 4, characters 7-12:
Definition is here
File "box_keyword.php", line 16, characters 15-20:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
File "box_keyword.php", line 4, characters 7-12:
Definition is here
File "box_keyword.php", line 17, characters 15-23:
Invalid reified hint (Typing[4305])
File "box_keyword.php", line 17, characters 22-22:
This is a wildcard, it cannot be used as a reified type argument
File "box_keyword.php", line 5, characters 21-22:
`Tr` is reified
